--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
 			<version>0.2.0</version>
 			<scope>compile</scope>
 		</dependency>
+				<!-- Source: https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
